.provarCaches/00D410000011HE0EAM/objects/rstk__sytrvlrhdr__c.object
<CustomObject>
    <description>sytrvlrhdr__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sytrvlrhdr_comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>COMMENTS</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sytrvlrhdr_descr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DESCR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sytrvlrhdr_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divsytrvlrhdrs</relationshipLabel>
        <relationshipName>divsytrvlrhdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sytrvlrhdr_id__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Traveler</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travelers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>